Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117734

Scatter highlight flickers / disappears when rotating after selection

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.7.0 FF
    • 6.7.0
    • Graphs: 3D
    • None
    • 750cfcc59 (dev)

      If you select something in scatter and the rotate the graph, the selected item flickers and/or disappears. It looks like both points (the actual point, and its highlight) are drawn with the same scale & position which is causing them to z-fight.

        For Gerrit Dashboard: QTBUG-117734
        # Subject Branch Project Status CR V

            oulu_hillbilly Sami Varanka
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes