Fix flickering selection indicator for scatter

If scattergraph item was selected and the graph
 rotated, it didn't scale down the selected item.
 This was because the scaling down happens in
 visual update. Therefore, scaling down needs to
 be done in position update also.

Fixes: QTBUG-117734
Change-Id: Id7377fa826bd13eff96a3a055d6d9a2b8e6e3240
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>